--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=DESKTOP-F6HRTMD\\SRKISQL;Initial Catalog=eCommerceAppDB;Integrated Security=True;Pooling=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
